--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,30 +6,29 @@
 * {
     box-sizing: border-box;}
   
-  .row {
+.row {
     display: flex;}
   
-  /* Create two columns that sits next to each other */
-  .column {
+/* Create two columns that sits next to each other */
+.column {
     flex: 50%;
     padding: 5px;}
   
-  .column3 {
+.column3 {
     flex: 33.3%;
     padding: 5px;}
   
-  h1 {
+h1 {
     color: white;} 
   
-  h2, h3, h4, h5, h6, b, p {
-    font-family: 'Noto Sans'; color: black !important;
-  }
-  h3 {
-    font-size:1.5em !important;
-  }
-  h2 {
-    font-size:1.7em !important;
-  }
+h2, h3, h4, h5, h6, b, p {
+    font-family: 'Noto Sans'; color: black !important;}
+
+h3 {
+    font-size:1.5em !important;}
+
+h2 {
+    font-size:1.7em !important;}
   
-  body {
+body {
     font-family: 'Noto Sans';}
