--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,7 +12,8 @@
 /* Create two columns that sits next to each other */
 .column {
     flex: 50%;
-    padding: 5px;}
+    padding: 5px;
+    margin: 10px;}
   
 .column3 {
     flex: 33.3%;
