--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,8 +12,7 @@
 /* Create two columns that sits next to each other */
 .column {
     flex: 50%;
-    padding: 5px;
-    margin: 10px;}
+    padding: 15px;}
   
 .column3 {
     flex: 33.3%;
